--- a/JogoTeste/JogoTeste.vcxproj
+++ b/JogoTeste/JogoTeste.vcxproj
@@ -140,6 +140,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Aranha.cpp" />
+    <ClCompile Include="Ente.cpp" />
     <ClCompile Include="Entidade.cpp" />
     <ClCompile Include="Fase.cpp" />
     <ClCompile Include="FaseUm.cpp" />
@@ -155,12 +156,13 @@
     <ClCompile Include="Menu.cpp" />
     <ClCompile Include="MenuPrincipal.cpp" />
     <ClCompile Include="Obstaculo.cpp" />
-    <ClCompile Include="Obstaculodiferente.cpp" />
+    <ClCompile Include="Teia.cpp" />
     <ClCompile Include="Solo.cpp" />
     <ClCompile Include="Personagem.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Aranha.h" />
+    <ClInclude Include="Ente.h" />
     <ClInclude Include="FaseUm.h" />
     <ClInclude Include="GerenciadorColisao.h" />
     <ClInclude Include="GerenciadorEvento.h" />
@@ -177,7 +179,7 @@
     <ClInclude Include="Menu.h" />
     <ClInclude Include="MenuPrincipal.h" />
     <ClInclude Include="Obstaculo.h" />
-    <ClInclude Include="Obstaculodiferente.h" />
+    <ClInclude Include="Teia.h" />
     <ClInclude Include="Solo.h" />
     <ClInclude Include="Personagem.h" />
   </ItemGroup>
