--- a/JogoTeste/JogoTeste.vcxproj
+++ b/JogoTeste/JogoTeste.vcxproj
@@ -142,6 +142,7 @@
     <ClCompile Include="Aranha.cpp" />
     <ClCompile Include="Ente.cpp" />
     <ClCompile Include="Entidade.cpp" />
+    <ClCompile Include="Espinhos.cpp" />
     <ClCompile Include="Fase.cpp" />
     <ClCompile Include="FaseUm.cpp" />
     <ClCompile Include="GerenciadorColisao.cpp" />
@@ -162,6 +163,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Aranha.h" />
+    <ClInclude Include="Espinhos.h" />
     <ClInclude Include="Ente.h" />
     <ClInclude Include="FaseUm.h" />
     <ClInclude Include="GerenciadorColisao.h" />
