Esqueleto agora persegue os dois jogadores; classe ListaJogadores criada

--- a/JogoTeste/JogoTeste.vcxproj
+++ b/JogoTeste/JogoTeste.vcxproj
@@ -153,6 +153,7 @@
     <ClCompile Include="Jogador.cpp" />
     <ClCompile Include="Jogo.cpp" />
     <ClCompile Include="ListaEntidades.cpp" />
+    <ClCompile Include="ListaJogadores.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Menu.cpp" />
     <ClCompile Include="MenuPrincipal.cpp" />
@@ -178,6 +179,7 @@
     <ClInclude Include="Jogo.h" />
     <ClInclude Include="Lista.h" />
     <ClInclude Include="ListaEntidades.h" />
+    <ClInclude Include="ListaJogadores.h" />
     <ClInclude Include="Menu.h" />
     <ClInclude Include="MenuPrincipal.h" />
     <ClInclude Include="Obstaculo.h" />
