--- a/JogoTeste/JogoTeste.vcxproj
+++ b/JogoTeste/JogoTeste.vcxproj
@@ -140,6 +140,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Aranha.cpp" />
+    <ClCompile Include="Chefe.cpp" />
     <ClCompile Include="Ente.cpp" />
     <ClCompile Include="Entidade.cpp" />
     <ClCompile Include="Espinhos.cpp" />
@@ -158,12 +159,14 @@
     <ClCompile Include="Menu.cpp" />
     <ClCompile Include="MenuPrincipal.cpp" />
     <ClCompile Include="Obstaculo.cpp" />
+    <ClCompile Include="Projetil.cpp" />
     <ClCompile Include="Teia.cpp" />
     <ClCompile Include="Solo.cpp" />
     <ClCompile Include="Personagem.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Aranha.h" />
+    <ClInclude Include="Chefe.h" />
     <ClInclude Include="Espinhos.h" />
     <ClInclude Include="Ente.h" />
     <ClInclude Include="FaseUm.h" />
@@ -183,6 +186,7 @@
     <ClInclude Include="Menu.h" />
     <ClInclude Include="MenuPrincipal.h" />
     <ClInclude Include="Obstaculo.h" />
+    <ClInclude Include="Projetil.h" />
     <ClInclude Include="Teia.h" />
     <ClInclude Include="Solo.h" />
     <ClInclude Include="Personagem.h" />
