--- a/JogoTeste/JogoTeste.vcxproj
+++ b/JogoTeste/JogoTeste.vcxproj
@@ -146,6 +146,7 @@
     <ClCompile Include="Espinhos.cpp" />
     <ClCompile Include="Fase.cpp" />
     <ClCompile Include="FaseUm.cpp" />
+    <ClCompile Include="Gelo.cpp" />
     <ClCompile Include="GerenciadorColisao.cpp" />
     <ClCompile Include="GerenciadorEvento.cpp" />
     <ClCompile Include="GerenciadorGrafico.cpp" />
@@ -170,6 +171,7 @@
     <ClInclude Include="Espinhos.h" />
     <ClInclude Include="Ente.h" />
     <ClInclude Include="FaseUm.h" />
+    <ClInclude Include="Gelo.h" />
     <ClInclude Include="GerenciadorColisao.h" />
     <ClInclude Include="GerenciadorEvento.h" />
     <ClInclude Include="GerenciadorGrafico.h" />
